force-app/main/default/objects/Invoice__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Maintained by flow from Credit Notes.</inlineHelpText>
    <label>Credit Notes Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>