force-app/main/default/objects/Invoice__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <formula>IF(AND(NOT(ISPICKVAL(Status__c, "Cancelled")), Amount__c - Amount_Paid__c - Credit_Amount__c &gt; 0, NOT(ISBLANK(Due_Date__c)), Due_Date__c &lt; TODAY()), TODAY() - Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>