force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <inlineHelpText>Invoice number in SAP (system of record). DEMO copy.</inlineHelpText>
    <label>SAP Invoice Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>