force-app/main/default/objects/Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, "Cancelled"), "Cancelled", IF(Amount__c - Amount_Paid__c - Credit_Amount__c &lt;= 0, "Paid", IF(Amount_Paid__c &gt; 0, "Partially Paid", IF(NOT(ISBLANK(Due_Date__c)) &amp;&amp; Due_Date__c &lt; TODAY(), "Overdue", "Open"))))</formula>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>