force-app/main/default/objects/Invoice__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30% Advance / 70% against BL</fullName>
            </value>
            <value>
                <fullName>LC at Sight</fullName>
            </value>
            <value>
                <fullName>TT 30 Days</fullName>
            </value>
            <value>
                <fullName>TT 60 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>