force-app/main/default/objects/Invoice__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <inlineHelpText>DEMO: invoices are mirrored from SAP in the real integration (Phase 2).</inlineHelpText>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP (Mock)</fullName>
                <default>true</default>
                <label>SAP (Mock)</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>